@@ -3,6 +3,9 @@
 <TITLE>GtkdocTester</TITLE>
 Bug446648
 Bug512154
+
+BUG_530758
+
 bug_141869_a
 bug_141869_b
 bug_324535
