@@ -1,5 +1,13 @@
 2008-05-05  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	* tests/bugs/docs/tester-sections.txt:
+	* tests/bugs/src/tester.h:
+	  Don't expand '#' in ulink tags. Also allow to escape "#%@" with '\'.
+	  Add to testsuite. Fixes #530758
+
+2008-05-05  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mktmpl.in:
 	  It is GObject not GtkObject anymore
 
@@ -9,7 +17,7 @@
 	  Make note about expanding urls.
 
 	* help/manual/C/gtk-doc-manual.xml:
-	  Document the use of |[ |] as a shortcut for program listing.
+	  Document the use of |[ ]| as a shortcut for program listing.
 
 	* tests/gobject/src/giface.h:
 	* tests/gobject/src/gobject.c:
